tests/cases/errors/compile_fun_missing_paren.lox
// The parameter list is required after the function name.
// expect compile error: Expect '(' after function name
fun foo {}
